--- a/PackNow/src/main/resources/templates/endereco/visualizar-enderecos.html
+++ b/PackNow/src/main/resources/templates/endereco/visualizar-enderecos.html
@@ -53,7 +53,7 @@
           <td style="text-align: center;">
             <!-- Botões de editar e deletar -->
             <a th:href="@{/endereco/edit/{id}(id=${endereco.id})}" class="btn btn-primary">Editar</a>
-            <a id="deleteButton" th:href="@{/endereco/delete/{id}(id=${endereco.id})}" class="btn btn-danger">Deletar</a>
+			<a href="#" class="btn btn-danger deleteButton" th:href="@{/endereco/delete/{id}(id=${endereco.id})}">Deletar</a>
           </td>
       </tbody>
     </table>
@@ -81,18 +81,24 @@
 	    });
 	  });
 	</script>
-	<script>
-    document.getElementById("deleteButton").addEventListener("click", function(event) {
-        event.preventDefault(); // Evita que o link seja seguido imediatamente
-
-        // Mostra o pop-up de confirmação
-        var confirmDelete = confirm("Você tem certeza que quer deletar esse endereço?");
-
-        // Se o usuário confirmar, segue com a deleção
-        if (confirmDelete) {
-            window.location.href = event.target.getAttribute("href");
-        }
-    });
-</script>
+		<script>
+		    // Seleciona todos os elementos com a classe deleteButton
+		    var deleteButtons = document.querySelectorAll('.deleteButton');
+		
+		    // Adiciona um evento de clique para cada botão de exclusão
+		    deleteButtons.forEach(function(button) {
+		        button.addEventListener("click", function(event) {
+		            event.preventDefault(); // Evita que o link seja seguido imediatamente
+		
+		            // Mostra o pop-up de confirmação
+		            var confirmDelete = confirm("Você tem certeza que quer deletar esse endereço?");
+		
+		            // Se o usuário confirmar, segue com a deleção
+		            if (confirmDelete) {
+		                window.location.href = event.target.getAttribute("href");
+		            }
+		        });
+		    });
+		</script>
 
 </html>
