Tentativa de implementação do Security

--- a/PackNow/src/main/resources/templates/error.html
+++ b/PackNow/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Erro</title>
+    <title>Erro!</title>
 	<div th:replace="~{head :: frag_head}"></div>
 
 </head>
@@ -15,6 +15,7 @@
 	</header>
 	    <!-- Conteúdo da página -->
 		<main>
+		<h1>Oops! Something went wrong</h1>
 		<div class="container">
             <h4 th:utext="${message}">message</h3th>
 		</div>				
