--- a/PackNow/src/main/resources/templates/funcionario/visualizar-funcionarios.html
+++ b/PackNow/src/main/resources/templates/funcionario/visualizar-funcionarios.html
@@ -57,7 +57,7 @@
           <td>
             <!-- Botões de editar e deletar -->
           <a th:href="@{/funcionario/edit/{id}(id=${funcionario.id})}" class="btn btn-primary">Editar</button>
-		<a href="#" class="btn btn-danger deleteButton" th:href="@{/funcionario/delete/{id}(id=${encomenda.id})}">Deletar</a>
+		<a href="#" class="btn btn-danger deleteButton" th:href="@{/funcionario/delete/{id}(id=${funcionario.id})}">Deletar</a>
           </td>
         </tr>
         
