--- a/PackNow/src/main/resources/templates/head.html
+++ b/PackNow/src/main/resources/templates/head.html
@@ -6,9 +6,10 @@
 	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 	<link th:href="@{/css/sticky-footer-navbar.css}" rel="stylesheet">
 	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css}" rel="stylesheet" >
-	<link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+	<link rel="canonical" th:href="@{https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/}" />
+	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css}" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/@docsearch/css@3}" />
+
 	
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
