--- a/PackNow/src/main/resources/static/css/sticky-footer-navbar.css
+++ b/PackNow/src/main/resources/static/css/sticky-footer-navbar.css
@@ -4,4 +4,7 @@
 
 main > .container {
   padding: 60px 15px 0;
+  background-color: white; /* Define o fundo como branco */
+  color: black; /* Define a cor do texto como preto */
 }
+
