--- a/PackNow/src/main/resources/templates/error.html
+++ b/PackNow/src/main/resources/templates/error.html
@@ -15,8 +15,23 @@
 	</header>
 	    <!-- Conteúdo da página -->
 		<main>
-		<h1>Oops! Something went wrong</h1>
+
 		<div class="container">
+			<h1>Houve um erro na aplicação.</h1>
+			<table>
+				<tr>
+					<td>Date</td>
+					<td th:text="${timestamp}"></td>
+				</tr>
+				<tr>
+					<td>Path</td>
+					<td th:text="${path}"></td>
+				</tr>
+				<tr>
+					<td>Status</td>
+					<td th:text="${status}"></td>
+				</tr>
+			</table>
             <h4 th:utext="${message}">message</h3th>
 		</div>				
 		</main>
