--- a/PackNow/src/main/resources/templates/pagina1.html
+++ b/PackNow/src/main/resources/templates/pagina1.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Title da home</title>
+    <title>PackNow</title>
 	<div th:replace="~{head :: frag_head}"></div>
 
 </head>
