--- a/PackNow/src/main/resources/static/css/sticky-footer-navbar.css
+++ b/PackNow/src/main/resources/static/css/sticky-footer-navbar.css
@@ -7,4 +7,23 @@ main > .container {
   background-color: white; /* Define o fundo como branco */
   color: black; /* Define a cor do texto como preto */
 }
+#searchInput::placeholder {
+  color: black; /* Define a cor do texto do placeholder como preto */
+  background-color: white;
+}
+
+form {
+  background-color: white;
+  color: black;
+}
+
+.form-control {
+  background-color: white;
+  color: black;
+}
+.container img {
+  max-width: 100%;
+  height: auto;
+}
+
 
