--- a/PackNow/src/main/resources/templates/funcionario/visualizar-funcionarios.html
+++ b/PackNow/src/main/resources/templates/funcionario/visualizar-funcionarios.html
@@ -19,12 +19,13 @@
 <main>
  <div class="container">
 		<div  class="row">
-				<div class="col-md-4">
-				  	<h1><b>Lista de funcionários</b></h1>
+				<div>
+				  	<h1> <i class="fa fa-id-badge" aria-hidden="true"></i> <b>Lista de funcionários</b></h1>
 				</div>
   				<div class="col-md-4 offset-md-4">
 				</div>		
 		</div>
+		<hr>
     <table id="moradoresTable" class="table table-striped">
 			<!-- Barra de pesquisa -->
 			<div  class="row">
@@ -56,7 +57,7 @@
           <td th:text="${funcionario.cargo}"></td>
           <td>
             <!-- Botões de editar e deletar -->
-          <a th:href="@{/funcionario/edit/{id}(id=${funcionario.id})}" class="btn btn-primary">Editar</button>
+          <a style="margin-right: 5px;" th:href="@{/funcionario/edit/{id}(id=${funcionario.id})}" class="btn btn-primary">Editar</button>
 		<a href="#" class="btn btn-danger deleteButton" th:href="@{/funcionario/delete/{id}(id=${funcionario.id})}">Deletar</a>
           </td>
         </tr>
