--- a/PackNow/src/main/resources/templates/head.html
+++ b/PackNow/src/main/resources/templates/head.html
@@ -4,7 +4,7 @@
 	<script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
 	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-	<link th:href="@{/css/sticky-footer-navbar.css}" rel="stylesheet">
+	<link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css}" rel="stylesheet" >
 	<link rel="canonical" th:href="@{https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/}" />
 	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css}" rel="stylesheet" type="text/css" />
@@ -125,12 +125,27 @@
       .bd-mode-toggle .dropdown-menu .active .bi {
         display: block !important;
       }
+	      searchInput::placeholder {
+	  color: black; /* Define a cor do texto do placeholder como preto */
+	  background-color: white;
+	}
+	
+	form {
+	  background-color: white;
+	  color: black;
+	}
+	
+	.form-control {
+	  background-color: white;
+	  color: black;
+	}
+
  
     </style>
 
     
     <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet">
+
   </head>
 	<body>
 		
