--- a/PackNow/src/main/resources/templates/header.html
+++ b/PackNow/src/main/resources/templates/header.html
@@ -71,7 +71,7 @@
 		      <div class="collapse navbar-collapse" id="navbarCollapse">
 		        <ul class="navbar-nav me-auto mb-2 mb-md-0">
 		          <li class="nav-item" style="margin-right: 10px;">
-					  <a th:href="@{/pagina1}"> <button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-home"  style="margin-right: 6px;"></i>Início</button> </a>
+					  <a th:href="@{/}"> <button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-home"  style="margin-right: 6px;"></i>Início</button> </a>
 						
 		          </li>
 		          <li style="margin-right: 10px;">
