--- a/PackNow/src/main/resources/templates/home.html
+++ b/PackNow/src/main/resources/templates/home.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Erro 500</title>
+    <title>PackNow</title>
 	<div th:replace="~{head :: frag_head}"></div>
 
 </head>
 
-<body >
+<body  >
 	<div th:replace="~{layoutBase :: frag_body}"></div>
 	<header >
 		<div th:insert:"~{header :: frag_header}"></div>
@@ -15,12 +15,11 @@
 	</header>
 	    <!-- Conteúdo da página -->
 		<main>
-
 		<div class="container">
-			<h1>Erro interno inesperado.</h1>
-			<hr>
-			<h3>Erro 500</h3>
-            <h4 th:utext="${message}">message</h3th>
+		      <a class="navbar-brand " href="#" style="">
+				<img th:src="@{/img/imagem_home_2.png}" alt="imagem_home">
+			  </a>
+	
 		</div>				
 		</main>
 		<div th:insert="~{footer :: frag_footer}"></div>
